--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-image: url(/Images/bridge.jpg);
+    background-image: url(./Images/bridge.jpg);
     background-position: center;
     background-size: cover;
     color: white;
